<?xml version="1.0"?>
<package>
  <name>rcll_refbox_peer</name>
  <version>0.2.1</version>
  <description>RCLL refbox communication adapter</description>

  <author>Tim Niemueller</author>
  <maintainer email="niemueller@kbsg.rwth-aachen.de">Tim Niemueller</maintainer>

  <license>GPLv2</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/rcll_refbox_peer</url> -->


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rcll_ros_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf2</build_depend>
  <run_depend>rcll_ros_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf2</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
